building instances and building blueprint domain flow added.

--- a/.gitignore
+++ b/.gitignore
@@ -6979,3 +6979,4 @@ rpg_idle_game.egg-info/PKG-INFO
 rpg_idle_game.egg-info/requires.txt
 rpg_idle_game.egg-info/SOURCES.txt
 rpg_idle_game.egg-info/top_level.txt
+/venv
