--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,8 @@ dependencies = [
     "pytest-asyncio",
     "asyncpg",
     "dramatiq",
-    "apscheduler"=3.11.0
+    "apscheduler"=3.11.0,
+    "python-multipart=0.0.20"
 ]
 
 [project.optional-dependencies]
