--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ license = {text = "MIT"}
 authors = [
     {name = "Your Name", email = "your.email@example.com"}
 ]
-package-mode = false
+
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
@@ -70,3 +70,13 @@ disallow_incomplete_defs = true
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 python_files = "test_*.py"
+SQLAlchemy~=2.0.41
+alembic~=1.16.0
+python-dotenv~=1.1.0
+fastapi~=0.115.12
+pydantic~=2.11.4
+redis~=6.1.0
+celery~=5.5.2
+uvicorn~=0.34.2
+pytest~=8.3.5
+pytest-asyncio~=0.26.0
